--- a/styles/index.css
+++ b/styles/index.css
@@ -17,12 +17,12 @@
 	margin:0 auto;
 	margin-bottom:10px;
 }
-#GeoName {
+#GeoCode {
 	width:280px;
 	margin:0 auto;
 	margin-bottom:10px;
 }
-#GeoNameInput input {
+#GeoCodeInput input {
 	box-shadow: 0px -1px 0px 0px #000;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
@@ -36,7 +36,7 @@
 	font-size:14px;
 	font-weight:;
 }
-#GeoNameButton {
+#GeoCodeButton {
 	height:42px;
 	width:90px;
 }
