--- a/styles/index.css
+++ b/styles/index.css
@@ -7,7 +7,22 @@
 	padding-top:40px;
 	width:128px;
 }
+#Name {
+	/* Text details */
+	text-align:center;
+	font-family: Helvetica, sans-serif;
+	font-weight: bold;
+	color: #D2FFB4;
+	text-shadow: 0px -1px #000;
+}
 #Info {
+	/* Text details */
+	text-align:center;
+	font-family: Helvetica, sans-serif;
+	font-weight: bold;
+	color: #D2FFB4;
+	text-shadow: 0px -1px #000;
+
 	font-size:12px;
 	font-weight:normal;
 }
