--- a/styles/index.css
+++ b/styles/index.css
@@ -38,6 +38,7 @@
 	margin-bottom:10px;
 }
 #GeoCodeInput input {
+	background-color: #D2FFB5;
 	box-shadow: 0px -1px 0px 0px #000;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
@@ -54,4 +55,13 @@
 #GeoCodeButton {
 	height:42px;
 	width:90px;
+}
+
+#GeolocationButton p{
+	position:relative;
+	top:10px;
+}
+#GeoCodeButton p{
+	position:relative;
+	top:-5px;
 }
