--- a/styles/index.css
+++ b/styles/index.css
@@ -38,6 +38,7 @@
 	margin-bottom:10px;
 }
 #GeoCodeInput input {
+	font-family: Helvetica, sans-serif;
 	background-color: #D2FFB5;
 	box-shadow: 0px -1px 0px 0px #000;
 	-webkit-border-radius: 4px;
@@ -59,7 +60,7 @@
 
 #GeolocationButton p{
 	position:relative;
-	top:-5px;
+	top:-7px;
 }
 #GeoCodeButton p{
 	position:relative;
