--- a/styles/main.css
+++ b/styles/main.css
@@ -2,12 +2,6 @@ body {
 	background-color: #276332;
 	background-image: url("../graphics/noise.png");
     margin: 0;
-    -webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
 }
 
 /*
@@ -26,7 +20,7 @@ body {
 	font-weight: bold;
 	color: #D2FFB4;
 	text-shadow: 0px -1px #000;
-	
+
 	box-shadow: 0px 1px 0px 0px #000, inset 0px 1px 0px 0px #95E376;
 	background-color:#2E733A;
 	background-image: url("../graphics/noise.png");
@@ -34,6 +28,14 @@ body {
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
+
+	/*Disable user interaction*/
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 /* Button has round top */
 .button.roundTop{
