Add a reset import for the css, this could break things for the moment...

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,5 @@
+@import url("http://meyerweb.com/eric/tools/css/reset/reset.css");
+
 body {
 	background-color: #276332;
 	background-image: url("../graphics/noise.png");
