--- a/styles/index.css
+++ b/styles/index.css
@@ -26,7 +26,8 @@
 	font-weight: bold;
 	color: #D2FFB4;
 	text-shadow: 0px -1px #000;
-	padding-top:20px;
+	padding-top:10px;
+	padding-bottom:20px;
 
 	font-size:12px;
 	font-weight:normal;
