--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,7 @@
 	color: #D2FFB4;
 	text-shadow: 0px -1px #000;
 	padding-top:10px;
+	padding-bottom:20px;
 }
 #Info {
 	/* Text details */
@@ -27,7 +28,8 @@
 	color: #D2FFB4;
 	text-shadow: 0px -1px #000;
 	padding-top:10px;
-	padding-bottom:20px;
+	padding-bottom:10px;
+	padding-top:10px;
 
 	font-size:12px;
 	font-weight:normal;
