--- a/styles/index.css
+++ b/styles/index.css
@@ -6,7 +6,8 @@
 	text-align: center;
 }
 #Icon {
-	padding-top:40px;
+	margin-top:40px;
+	margin-bottom:10px;
 	width:128px;
 }
 #Name {
@@ -17,8 +18,8 @@
 	font-size:16px;
 	color: #D2FFB4;
 	text-shadow: 0px -1px #000;
-	padding-top:10px;
 	padding-bottom:20px;
+	margin-bottom:20px;
 }
 #Info {
 	/* Text details */
@@ -27,9 +28,7 @@
 	font-weight: bold;
 	color: #D2FFB4;
 	text-shadow: 0px -1px #000;
-	padding-top:10px;
-	padding-bottom:10px;
-	padding-top:10px;
+	margin-bottom:10px;
 
 	font-size:12px;
 	font-weight:normal;
