--- a/styles/map.css
+++ b/styles/map.css
@@ -14,6 +14,7 @@ body { height: 100%; margin: 0; padding: 0 }
 
 #MapContainer a,#MapContainer a:visited,#MapContainer a:hover{
 	color: #000;
+	text-decoration:underline;
 }
 
 /* Describes Button sizes, position*/   
