--- a/styles/map.css
+++ b/styles/map.css
@@ -6,6 +6,10 @@ body { height: 100%; margin: 0; padding: 0 }
 #MapContainer {
     width: 100%;
     height: 100%;
+    font-family: Helvetica, Sans-serif;
+}
+#MapContainer span{
+    width:260px;
 }
 #Map {
     width: 100%;
