--- a/styles/index.css
+++ b/styles/index.css
@@ -50,6 +50,8 @@
 	margin-bottom:10px;
 }
 #GeoCodeInput input {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box; 
 	box-sizing: border-box;
 	font-family: Helvetica, sans-serif;
 	background-color: #D2FFB5;
