--- a/css/main.css
+++ b/css/main.css
@@ -157,6 +157,11 @@ textarea {
 	user-select: none;
 }
 
+.page-select .searchButton {
+	margin:10px;
+	width:300px;
+	height:50px;
+}
 
 .page-home .main {
 	width:320px;
