--- a/css/main.css
+++ b/css/main.css
@@ -157,7 +157,7 @@ textarea {
 	user-select: none;
 }
 
-.page-select .searchButton {
+.page-select #searchButton {
 	margin:10px;
 	width:300px;
 	height:50px;
