added script file for select

--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,20 @@ textarea {
 	font-weight: bold;
 }
 
+.page-select .typeInfoText {
+	font-weight: normal;
+	font-size: 14px;
+	margin-top:10px;
+	padding-top:5px;
+	padding-bottom:5px;
+	width:300px;
+	padding-left:10px;
+	padding-right:10px;
+	background:rgba(0,0,0,0.2);
+	border-top: 1 solid rgba(0,0,0,.3);
+	border-bottom: 1 solid rgba(166,256,231,.3);
+}
+		
 .page-select .typeInfoButton {
 	background: rgba(255,0,0,.2);
 	text-align:center;
