--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,7 @@ textarea {
 }
 
 .page-select .typeCheckbox {
+	float: left;
 	background: rgba(255,0,0,.2);
 	width:42px;
 	height:42px;
@@ -136,7 +137,7 @@ textarea {
 
 
 .page-select .typeName {
-	position:relative;
+	float: left;
 	background: rgba(255,0,0,.2);
 	width:216px;
 	height:42px;
@@ -144,6 +145,7 @@ textarea {
 }
 
 .page-select .typeInfoText {
+	display: none;
 	font-weight: normal;
 	font-size: 14px;
 	margin-top:10px;
@@ -158,6 +160,7 @@ textarea {
 }
 		
 .page-select .typeInfoButton {
+	float: left;
 	background: rgba(255,0,0,.2);
 	text-align:center;
 	font-family: times;
