--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,7 @@ textarea {
 .page-select .type {
 	width:100%;
 	height:42px;
+	display: none;
 	margin:0px;
 	padding:0px;
 }
@@ -187,6 +188,10 @@ textarea {
 .page-select #searchButton {
 	width:320px;
 	height:50px;
+}
+
+.page-select #searchButton p {
+	padding-top: 15px;
 }
 
 .page-home .main {
