--- a/css/main.css
+++ b/css/main.css
@@ -290,6 +290,89 @@ input:-ms-input-placeholder { color:    #276332;}
 }
 
 
+.page-map #MapContainer {
+    width: 100%;
+    height: 100%;
+    font-family: Helvetica, Sans-serif;
+}
+.page-map #Map {
+    width: 100%;
+    height: 100%;
+}
+
+.page-map #MapContainer a,#MapContainer a:visited,#MapContainer a:hover{
+	color: #333;
+	text-decoration:underline;
+}
+
+/* Describes Button sizes, position*/   
+.page-map #ButtonZoomIn{
+	font-size:30px;
+	height:46px;
+	width:50px;
+	position:absolute;
+	bottom:56px;
+	left:10px;
+}
+.page-map #ButtonZoomOut{
+	font-size:30px;
+	height:45px;
+	width:50px;
+	position:absolute;
+	bottom:10px;
+	left:10px;
+}
+.page-map #ButtonHelp{
+	font-size:25px;
+	height:42px;
+	width:50px;
+	position:absolute;
+	bottom:10px;
+	right:10px;
+}
+.page-map #ButtonLocation{
+	height:42px;
+	width:50px;
+	position:absolute;
+	bottom:61px;
+	right:10px;
+}
+.page-map #ButtonSelect{
+	font-size:14px;
+	height:42px;
+	width:56%;
+	margin-left: -28%;
+	position:absolute;
+	bottom:10px;
+	left:50%;
+}
+
+/*Describes button text/image positions (using a paragraph block)*/
+.page-map #ButtonZoomIn p{
+	position:relative;
+	top: 6px;
+}
+.page-map #ButtonZoomOut p{
+	position:relative;
+	top: 6px;
+}
+.page-map #ButtonLocation p{
+	position:relative;
+	top: 9px;
+}
+.page-map #ButtonHelp p{
+	position:relative;
+	top: 9px;
+}
+.page-map #ButtonSelect p{
+	position:relative;
+	top: 12px;
+}
+
+
+
+
+
 /*
 	Describes the buttons that they user can click on.
 */
