--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,8 @@ textarea {
 }
 
 body {
+    width: 100%;
+    height: 100%;
     font-size: 1em;
     line-height: 1.4;
     background-color: #276332;
