--- a/css/main.css
+++ b/css/main.css
@@ -226,8 +226,14 @@ textarea {
 
 
 .page-home .flashMessage {
-	margin:10px;
-	text-align: center;
+	text-align:center;
+	font-family: Helvetica, sans-serif;
+	font-weight: bold;
+	font-size:20px;
+	color: #D2FFB4;
+	text-shadow: 0px -1px #000;
+	padding-bottom:20px;
+	margin-bottom:20px;
 }
 
 .page-home #name {
