--- a/css/main.css
+++ b/css/main.css
@@ -232,8 +232,7 @@ textarea {
 	font-size:20px;
 	color: #D2FFB4;
 	text-shadow: 0px -1px #000;
-	padding-bottom:20px;
-	margin-bottom:20px;
+	padding-top:20px;
 }
 
 .page-home #name {
