--- a/css/main.css
+++ b/css/main.css
@@ -269,6 +269,7 @@ textarea {
 	position: relative;
 	height:32px;
 	width:32px;
+	background: #FFF;
 	right:10px;
 	top:5px;
 	background-image: url('/img/loading.png');
