--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,7 @@ textarea {
 
 .page-select .typeInfoText {
 	display: none;
+	float: left;
 	font-weight: normal;
 	font-size: 14px;
 	margin-top:10px;
