--- a/css/main.css
+++ b/css/main.css
@@ -192,9 +192,10 @@ textarea {
 	float: left;
 	font-weight: normal;
 	font-size: 14px;
-	margin-top:10px;
+	margin-bottom:10px;
 	padding-top:5px;
 	padding-bottom:5px;
+	margin-left: 20px;
 	width:300px;
 	padding-left:10px;
 	padding-right:10px;
