--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,7 @@ textarea {
 }
 
 .page-select #info {
+	font-style:italic;
 	margin:10px;
 	text-align: center;
 }
@@ -104,7 +105,6 @@ textarea {
 	float: left;
 	padding-top: 10px;
 	padding-left: 10px;
-	background: rgba(255,0,0,.2);
 	width:32px;
 	height:32px;
 }
@@ -112,7 +112,6 @@ textarea {
 .page-select .categoryName {
 	float: left;
 	padding-top: 10px;
-	background: rgba(255,0,0,.2);
 	width:236px;
 	height:32px;
 	font-weight: bold;
@@ -122,7 +121,6 @@ textarea {
 	float: left;
 	display:inline;
 	padding-top: 10px;
-	background: rgba(255,0,0,.2);
 	width:42px;
 	height:32px;
 }
