--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,10 @@ textarea {
 	-ms-user-select: none;
 	user-select: none;
 }
+.page-select .typeInfoButton p {
+	position:relative;
+	top:0px;
+}
 
 .page-select .typeInfoText {
 	display: none;
@@ -189,6 +193,7 @@ textarea {
 	font-weight: normal;
 	font-size: 14px;
 	padding-top:5px;
+	padding-bottom:5px;
 	padding-left: 40px;
 	width: 270px;
 	padding-right:10px;
