updated CSS for select.php

--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,8 @@ textarea {
 	height:50px;
 	width:320px;
 	cursor:pointer;
+	border-top: 1px solid rgba(0,0,0,.3);
+	border-bottom: 1px solid rgba(166,256,231,.3);
 }
 
 .page-select .categoryToggle {
