--- a/css/main.css
+++ b/css/main.css
@@ -82,9 +82,7 @@ textarea {
 
 
 .page-select .main {
-	border: 1px solid #000;
-	width:300px;
-	margin: 10px;
+	width:320px;
 	margin:0 auto;
 	font-family: Helvetica, Sans-Serif;
 	color:#D2FFB4;
@@ -92,15 +90,13 @@ textarea {
 }
 
 .page-select #info {
-	padding-top:10px;
-	padding-bottom:10px;
-	font-style:italic;
+	margin:10px;
 	text-align: center;
 }
 
 .page-select .category {
 	height:50px;
-	width:300px;
+	width:320px;
 	cursor:pointer;
 }
 
@@ -108,6 +104,7 @@ textarea {
 	float: left;
 	padding-top: 10px;
 	padding-left: 10px;
+	background: rgba(255,0,0,.2);
 	width:32px;
 	height:32px;
 }
@@ -115,7 +112,8 @@ textarea {
 .page-select .categoryName {
 	float: left;
 	padding-top: 10px;
-	width:216px;
+	background: rgba(255,0,0,.2);
+	width:236px;
 	height:32px;
 	font-weight: bold;
 }
@@ -124,6 +122,7 @@ textarea {
 	float: left;
 	display:inline;
 	padding-top: 10px;
+	background: rgba(255,0,0,.2);
 	width:42px;
 	height:32px;
 }
@@ -161,7 +160,7 @@ textarea {
 
 .page-select .typeName {
 	float: left;
-	width:216px;
+	width:236px;
 	height:32px;
 	cursor:pointer;
 	padding-top: 10px;
@@ -190,19 +189,21 @@ textarea {
 	float: left;
 	font-weight: normal;
 	font-size: 14px;
+	margin-bottom:10px;
 	padding-top:5px;
 	padding-bottom:5px;
-	padding-left: 40px;
-	width: 270px;
+	margin-left: 10px;
+	width:290px;
+	padding-left:10px;
 	padding-right:10px;
 	background:rgba(0,0,0,0.2);
-	border-top: 1px solid rgba(0,0,0,.3);
-	border-bottom: 1px solid rgba(166,256,231,.3);
+	border-top: 1 solid rgba(0,0,0,.3);
+	border-bottom: 1 solid rgba(166,256,231,.3);
 }
 		
 
 .page-select #searchButton {
-	width:300px;
+	width:320px;
 	height:50px;
 }
 
