updated CSS for select.php@

--- a/css/main.css
+++ b/css/main.css
@@ -200,14 +200,15 @@ textarea {
 	width:270px;
 	padding-right:10px;
 	background:rgba(0,0,0,0.2);
-	border-top: 1 solid rgba(0,0,0,.3);
-	border-bottom: 1 solid rgba(166,256,231,.3);
+	border-top: 1px solid rgba(0,0,0,.3);
+	border-bottom: 1px solid rgba(166,256,231,.3);
 }
 		
 
 .page-select #searchButton {
 	float: left;
-	width:320px;
+	width:300px;
+	margin:10px;
 	height:50px;
 }
 
