--- a/css/main.css
+++ b/css/main.css
@@ -281,7 +281,7 @@ textarea {
 	width:32px;
 	right:10px;
 	top:5px;
-	background-image: url('/img/loading.png');
+	background-image: url('/img/loading.gif');
 	background-size: 50%;
 }
 .page-home #geoCode {
