--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,15 @@ textarea {
 	width:32px;
 	height:32px;
 }
+.page-select .categoryToggle.open{
+	float: left;
+	padding-top: 10px;
+	padding-left: 10px;
+	width:32px;
+	height:32px;
+	background: url('img/open.png')
+	background-size:100%;
+}
 
 .page-select .categoryName {
 	float: left;
