--- a/css/main.css
+++ b/css/main.css
@@ -107,11 +107,11 @@ textarea {
 	padding-left: 10px;
 	width:32px;
 	height:32px;
-	background-image: url('img/closed.png');
+	background-image: url('/img/closed.png');
 	background-size:100%;
 }
 .page-select .categoryToggle.open{
-	background: url('img/open.png');
+	background: url('/img/open.png');
 	background-size:100%;
 }
 
