--- a/css/main.css
+++ b/css/main.css
@@ -220,6 +220,10 @@ textarea {
 	padding-top: 14px;
 }
 
+.page-select a, .page-select a:hover, .page-select a:visited{
+	text-decoration:underline;
+}
+
 
 .page-help .main {
 	width:320px;
@@ -418,6 +422,15 @@ input:-ms-input-placeholder { color:    #276332;}
 */
 .page-info .nametitle, .page-info .addresstitle, .page-info .outlettypestitle {
 	font-weight:bold;
+}
+
+.page-info .name, .page-info .address, .page-info .outlettypes {
+	text-indent: 40px;
+}
+
+.page-info a, .page-info a:hover, .page-info a:visited{
+	color:#D2FFB4;
+	text-decoration:underline;
 }
 
 
