changed css for info.php

--- a/css/main.css
+++ b/css/main.css
@@ -221,7 +221,7 @@ textarea {
 }
 
 .page-select a, .page-select a:hover, .page-select a:visited{
-	color:#C2EFA4;
+	color:#B2DF94;
 	text-decoration:underline;
 }
 
