--- a/css/main.css
+++ b/css/main.css
@@ -431,9 +431,11 @@ input:-ms-input-placeholder { color:    #276332;}
 
 .page-info .name, .page-info .address {
 	float:left;
-	padding-left:40px;
+	padding-left:20px;
 }
-
+.page-info .button {
+	height:42px;
+}
 .page-info a, .page-info a:hover, .page-info a:visited{
 	color:#B2DF94;
 	text-decoration:underline;
