--- a/css/main.css
+++ b/css/main.css
@@ -429,10 +429,9 @@ input:-ms-input-placeholder { color:    #276332;}
 	font-weight:bold;
 }
 
-.page-info .name, .page-info .address {
+.page-info .name, .page-info .address,.page-info [class|="recycle_type"] {
 	float:left;
 	padding-left:20px;
-	padding-bottom:20px;
 }
 .page-info .button {
 	height:42px;
