--- a/css/main.css
+++ b/css/main.css
@@ -445,7 +445,8 @@ input:-ms-input-placeholder { color:    #276332;}
 	top:12px;
 }
 .page-info a, .page-info a:hover, .page-info a:visited{
-	color:#B2DF94;
+	padding-top:20px;
+	width:300px;
 	text-decoration:none;
 }
 
