changed css for info.php

--- a/css/main.css
+++ b/css/main.css
@@ -432,8 +432,12 @@ input:-ms-input-placeholder { color:    #276332;}
 	float:left;
 	padding-left:20px;
 }
+.page-info .address:after {
+	content: " (Open in Google Maps) ";
+}
 .page-info .address {
 	padding-bottom:20px;
+	text-decoration:underline;
 }
 .page-info .button {
 	float:left;
