changed css for info.php

--- a/css/main.css
+++ b/css/main.css
@@ -434,6 +434,7 @@ input:-ms-input-placeholder { color:    #276332;}
 }
 .page-info .address:after {
 	text-decoration: none;
+	color:#B2DF94;
 	content: " (Google Maps) ";
 }
 .page-info .address {
