--- a/css/main.css
+++ b/css/main.css
@@ -438,7 +438,7 @@ input:-ms-input-placeholder { color:    #276332;}
 }
 .page-info .addresstitle:after {
 	text-decoration: none;
-	color:#B2DF94;
+	color:#A2CF84;
 	content: " (Google Maps) ";
 }
 .page-info .button {
