changed css for help.php

--- a/css/main.css
+++ b/css/main.css
@@ -472,12 +472,14 @@ input:-ms-input-placeholder { color:    #276332;}
 	text-align:left;
 }
 .page-help .title {
-	font-size:18px;
-	
+	font-size:20px;
+	text-align:center;
 }
 .page-help .description {
 	font-size:12px;
 	font-style:oblique;
+	text-align:center;
+	margin-bottom:20px;
 }
 
 /*
