--- a/css/main.css
+++ b/css/main.css
@@ -237,7 +237,13 @@ textarea {
 	text-shadow: 0px -1px #000;
 	padding-top:20px;
 }
-
+.page-home #help {
+	position: relative;
+	top:0px;
+	right:0px;
+	padding:10px;
+	font-size:12px;
+}
 .page-home #name {
 	/* Text details */
 	text-align:center;
