--- a/css/main.css
+++ b/css/main.css
@@ -238,7 +238,7 @@ textarea {
 	padding-top:20px;
 }
 .page-home #help {
-	position: relative;
+	position: absolute;
 	top:0px;
 	right:0px;
 	padding:10px;
