changed css for help.php

--- a/css/main.css
+++ b/css/main.css
@@ -239,7 +239,6 @@ textarea {
 }
 .page-home #help {
 	float: right;
-	margin-right:20px;
 	padding:10px;
 	font-size:12px;
 }
@@ -269,7 +268,7 @@ textarea {
 }
 .page-home #geoLocationButton {
 	height:42px;
-	width:280px;
+	width:100%;
 	margin:0 auto;
 	margin-bottom:10px;
 }
@@ -283,7 +282,7 @@ textarea {
 	background-size: 100%;
 }
 .page-home #geoCode {
-	width:280px;
+	width:100%;
 	margin:0 auto;
 	margin-bottom:10px;
 }
