--- a/css/main.css
+++ b/css/main.css
@@ -487,6 +487,8 @@ input:-ms-input-placeholder { color:    #276332;}
 	text-decoration:underline;
 }
 .page-help #ButtonBack {
+	width:200px;
+	height:42px;
 	float: left;
 	margin-right:20px;
 	margin-left:-20px;
