--- a/css/main.css
+++ b/css/main.css
@@ -487,12 +487,15 @@ input:-ms-input-placeholder { color:    #276332;}
 	text-decoration:underline;
 }
 #ButtonBack {
-	width:50px;
+	position:absolute;
+	top:0px;
+	left:0px;
+	width:20px;
 	float: left;
-	margin-right:20px;
-	margin-left:-20px;
+	margin-right:-20px;
+	margin-left:20px;
 	padding:10px;
-	font-size:12px;
+	font-size:16px;
 }
 
 /*
