--- a/css/main.css
+++ b/css/main.css
@@ -489,12 +489,10 @@ input:-ms-input-placeholder { color:    #276332;}
 }
 #ButtonBack {
 	position:absolute;
-	top:0px;
+	line-height:120%;
+	top:20px;
 	left:0px;
 	width:20px;
-	float: left;
-	margin-right:-20px;
-	margin-left:20px;
 	padding:10px;
 	font-size:16px;
 }
