--- a/css/main.css
+++ b/css/main.css
@@ -492,8 +492,11 @@ input:-ms-input-placeholder { color:    #276332;}
 	top:20px;
 	left:0px;
 	width:20px;
-	padding:10px 10px 0px 10px;
+	padding:10px 10px 5px 10px;
 	font-size:16px;
+}
+.page-home #ButtonBack{
+	right:0px;
 }
 
 /*
