--- a/css/main.css
+++ b/css/main.css
@@ -460,6 +460,9 @@ input:-ms-input-placeholder { color:    #276332;}
 .page-info .typeName {
 	margin-left: 20px;
 }
+.page-info .type {
+	height: 30px;
+}
 .page-info .type p {
 	height: 20px;
 }
