--- a/css/main.css
+++ b/css/main.css
@@ -457,6 +457,9 @@ input:-ms-input-placeholder { color:    #276332;}
 .page-info .categoryToggle {
 	margin: 9px 9px 9px 0px;
 }
+.page-info .categoryName {
+	width: 280px;
+}
 .page-info .typeName {
 	margin-left: 20px;
 }
